# claude-code-manager

./: .claude-manager.i18n.toml  .gitignore  IMPLEMENT_PROMPT.md  README.en.md  README.ja.md  README.md  TODO.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: memo-scratch.md
.claude/hooks/: stop-keep-asking.py
.github/chatmodes/: memo-scratch.chatmode.md
.github/instructions/: main.instructions.md
READMEs/: README.en.md  README.ja.md
claude_code_manager/: __init__.py  cli.py
docs/: README.en.md  README.ja.md
docs/en/: README.md
docs/i18n/: README.ja.md
docs/ja/: README.md
i18n/: README.ja.md
tests/: test_todo_and_hooks.py
