[project]
name            = "claude-code-manager"
version         = "0.1.0"
description     = "CLI to orchestrate claude-code runs from a Markdown TODO list"
readme          = "README.md"
requires-python = ">=3.11"
dependencies    = ["typer>=0.12.3"]

    [project.optional-dependencies]
    test = ["pytest>=8"]

    [project.scripts]
    claude-manager = "claude_code_manager.cli:main"

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["claude_code_manager*"]
